--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,15 @@
 @tailwind utilities;
 
 @layer components {
+  .btn {
+    @apply shadow w-full border py-1 px-2 mt-5 hover:text-white transition-all duration-500 rounded-md;
+  }
+
   .btn-primary {
-    @apply shadow w-full border border-amber-500 py-1 px-2 mt-5 text-amber-500 hover:text-white hover:bg-amber-500 transition-all duration-500 rounded-md;
+    @apply border-amber-500 text-amber-500 hover:bg-amber-500;
+  }
+
+  .btn-secondary {
+    @apply border-secondary text-secondary hover:bg-secondary;
   }
 }
