--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .btn {
-    @apply shadow w-full border py-1 px-2 mt-5 hover:text-white transition-all duration-500 rounded-md;
+    @apply shadow w-full border py-2 px-4 my-5 rounded-xl hover:text-white transition-all duration-500;
   }
 
   .btn-primary {
